# tomwms-replit-client-automate

./: .gitignore  AGENTS.md  AND.csv  App Config de TOMIMS.txt  BRAIN-FEDERATED-SETUP.md  CHANGELOG.md  CLAUDE.md  DevExpress_License.txt  IDENTITY.md  INSTALL.md  MEMORY.md  NuGet.config  PARCHES_APLICADOS.md  README.md  TOMIMSV4.sln.GhostDoc.user.dic  TOMWMS.sln  TOMWMS.slnLaunch  TOOLS.md  TomImsInv.xlsx  USER.md  UpgradeLog.htm  UpgradeLog2.htm  UpgradeLog3.htm  UpgradeLog4.htm  VW_TransUbicHhDet.txt  aider.ps1  clean_wms.ps1  codex-context-mi3-di-estatus.yml  commits.txt  f.ps1  openclaw-workspace-state.json  package-lock.json  reserva-mi3-log-out.txt  unmerged.txt  unmerged_clean.txt  valuetuple_hits.csv
AWS_WMSBD_Updater/: AWSBD.Context.tt  AWSBD.Context.vb  AWSBD.Designer.vb  AWSBD.edmx  AWSBD.edmx.diagram  AWSBD.tt  AWS_WMSBD_Updater.vbproj  SiteContent.vb  Web.config  aspnet_Applications.vb  aspnet_Sessions.vb  aspnet_Users.vb  sync.asmx  sync.asmx.vb  tbl_empresa_registro.vb  tbl_version_bd_wms.vb  tbl_version_bd_wms_det.vb
AppGlobal/: App.config  AppGlobal.vbproj  clsCasosUsoReserva.vb  packages.config
Archivos de copia de seguridad de Crystal Reports/: WMS.vbproj
Backup/: TOMWMS.sln
CEALSAMI3/: CEALSASYNC.sln  CELSASYNC.vbproj  Conn.ini  ConnDev.ini  app.config
DMS/: App.config  Conn.ini  DMS.vbproj  DMS_1_TemporaryKey.pfx  DMS_2_TemporaryKey.pfx  Form1.vb  apiConfig.config
DashBorlin/: DashBorlin.vbproj
brain/wms-agent/: README.md  pyproject.toml  wmsa.cmd
brain/wms-agent/wmsa/: __init__.py  brain.py  case.py  cli.py  config.py  killios.py
(+7765 files in other folders)
