[project]
name = "wms-agent"
version = "0.1.0"
description = "Swiss-army CLI for the WMS project — local helper for openclaw + Replit Brain"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
    "keyring>=24.0.0",
]

[project.optional-dependencies]
db = ["pyodbc>=5.0.0"]

[project.scripts]
wmsa = "wmsa.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["wmsa*"]
